--- a/views/templates/homepage.html.twig
+++ b/views/templates/homepage.html.twig
@@ -19,7 +19,7 @@
     {% block error %}
     {% endblock %}
        <section id="homepage" class="homepage-content">
-        <header>
+        <header class="homepage-header">
             <h1>Page Accueil</h1>
             <p class="subtitle">Bonjour et Bienvenue sur le site Apprendre avec Miaou !</p>
             <p class="description">Le site de jeux et activités pour les enfants de 3/5 ans</p>
@@ -30,10 +30,10 @@
             
             <figure class="auth-images" aria-hidden="true">
                 <a href="?route=login" aria-label="Se connecter">
-                    <img src="assets/img/Miaou/CadenasCoeur.png" alt="Cadenas en forme de cœur">
+                    <img src="assets/img/Miaou/CadenasCoeur.svg" alt="Cadenas en forme de cœur">
                 </a>
                 <a href="?route=login" aria-label="Se connecter">
-                    <img src="assets/img/Miaou/ClefCoeur.png" alt="Clef en forme de cœur">
+                    <img src="assets/img/Miaou/ClefCoeur.svg" alt="Clef en forme de cœur">
                 </a>
             </figure>
             
